# msmodeling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  build.py  pyproject.toml  requirements.txt
.agents/: README.md
.agents/skills/: README.md
.gitcode/: PULL_REQUEST_TEMPLATE.md
.gitcode/ISSUE_TEMPLATE/: 510-RFC.yml
.loop/memory/: lessons.md
cli/: __init__.py  logo.py  main.py  utils.py
cli/inference/: model_adapter.py  text_generate.py  throughput_optimizer.py  video_generate.py
contrib/optix/: README.md
contrib/optix/evalscopeplugin/: pyproject.toml
contrib/optix/evalscopeplugin/evalscopeperf/: __init__.py  benchmark.py  settings.py
contrib/optix/vllm_msserviceprofiler/: pyproject.toml
contrib/optix/vllm_msserviceprofiler/src/vllm_msserviceprofiler/: __init__.py  benchmark.py  settings.py  simulator.py
contrib/optix/vllm_msserviceprofiler/vllm_scripts/: deploy_02.sh  deploy_03.sh
docs/RFC/: RFC_template.md  rfc_chunked_prefill_support_zh.md  rfc_custom_model_support_en.md  rfc_custom_model_support_zh.md  rfc_deepseek_attention_context_parallel_en.md  rfc_deepseek_attention_context_parallel_zh.md  rfc_performance_database_collection_tooling_en.md  rfc_performance_database_collection_tooling_zh.md  rfc_q2_modeling_tecnical_plan.md  rfc_uv_dependency_management_en.md
docs/design/: a3_roce_device_profile_design.md  a5_device_profile_design.md  kimi_K2.5_adaption_design.md  model_adaptation_efficiency_design.md  optix-service-parameter-optimizer-design.md  performance_database_collection_tooling.md  ut_refactor.md
docs/en/: optix_instruct.md  run_throughput_optimizer_cases.md  serving_cast_simulation.md  tensor_cast_instruct.md  tensor_cast_new_model_adaptation.md  throughput_optimizer.md  web_ui.md
docs/zh/: optix_instruct.md  optix_plugin_instruct.md
experimental/: pyproject.toml
experimental/optix/: __init__.py  analysis.py  cli.py  common.py  config.toml  io_utils.py
experimental/optix/config/: base_config.py  config.py  constant.py  custom_command.py  model_config.py
experimental/optix/optimizer/: analyze_profiler.py  communication.py  custom_process.py  experience_fine_tunning.py  global_best_custom.py  health_check.py  optimizer.py  performance_tunner.py  register.py  scheduler.py  server.py  simulator.py  store.py  utils.py
experimental/optix/optimizer/interfaces/: benchmark.py  custom_process.py  simulator.py
experimental/optix/optimizer/plugins/: benchmark.py  plugin.md  simulate.py
experimental/optix/plugins/: __init__.py
experimental/test/: test_analysis.py  test_common.py  test_run_throughput_optimizer_cases.py
experimental/test/test_config/: test_config_config.py  test_custom_command.py  test_model_config.py
experimental/test/test_optimizer/: test_custom_process.py  test_health_check.py  test_interface_custom_process.py  test_optimizer_benchmark.py  test_schedule.py  test_server.py  test_simulator.py  test_store.py
optix/: __init__.py  __main__.py  common.py  config.toml  deploy_env.py  logging.py  run_throughput_optimizer_cases.py
optix/config/: base_config.py  config.py  custom_command.py
optix/optimizer/: errors.py  global_best_custom.py  health_check.py  optimizer.py  outcome.py  performance_tuner.py  protocols.py  register.py  scheduler.py  store.py  utils.py
pre-commit/: .gitleaks.toml  llm_render.patch  llm_render.py  pyproject.toml  typos.toml
scripts/: README.md  build.sh  prefetch_model_configs.py  run_benchmark.sh  run_ci_gate.sh  run_nightly.sh  run_regression.sh  run_smoke.sh  run_test_map_sync.sh
scripts/helpers/: _config.py  _errors.py  _paths.py
scripts/lib/: common.sh
serving_cast/: communication.py  config.py  engine.py  instance.py  kv_cache_manager.py  load_gen.py  main.py  model_runner.py  parallel_runner.py  request.py  serving.py  stime.py  utils.py
serving_cast/example/: common.yaml  instances.yaml  length_distribution.yaml
serving_cast/profiler/: profiler_interface.py  profiler_stime.py  profiler_utils.py
serving_cast/service/: agg_throughput_optimizer.py  base_throughput_optimizer.py  disagg_throughput_optimizer.py  latency_table.py  optimizer_curve_plots.py  optimizer_factory.py  optimizer_summary.py  pd_ratio_throughput_optimizer.py  scheduler.py  utils.py
serving_cast/tests/: run_test.sh
spec/governance/: source-of-truth-matrix.md
tensor_cast/: config.py  device.py  model_config.py  model_hub.py  parallel_group.py  patch_torch.py  pipeline_parallel.py  quantize_utils.py  runtime.py  utils.py
tensor_cast/adapter/: actual.py  advisor.py  ai_task.py  context.py  doctor.py  evidence.py  evidence_builder.py  evidence_export.py  hints.py  insight.py  inspect.py  patch_discovery.py  patch_report.py  profile.py  profile_draft.py  questions.py  recipes.py  runner.py  st_case.py  verifier.py
tensor_cast/compilation/: __init__.py  compile_backend.py  pass_base.py  topo_sort.py
tensor_cast/core/: config_resolver.py  input_generator.py  model_builder.py  model_runner.py  model_source_security.py  user_config.py  utils.py
tensor_cast/diffusers/: diffusers_attention.py  diffusers_model.py  diffusers_utils.py  dit_cache_registry.py  model_resolver.py  pipeline_metadata.py
tensor_cast/layers/: attention.py  deepseek_v4.py  glm5.py  internal.py  mla.py  moe_layer.py  mtp.py  parallel_embedding.py  parallel_linear.py  quant_linear.py  rotary_embedding.py  sampler.py  utils.py
tensor_cast/ops/: __init__.py  attention.py  cat.py  communication.py  deepseek_v4.py  fused_moe.py  internal.py  la.py  layernorm.py  mla.py  rotary_embedding.py  swiglu.py
tensor_cast/performance_model/: __init__.py  analytic.py  base.py  bound_analyzer.py  comm_analytic.py  empirical.py  utils.py  (+5 more)
tests/: README.md  SKILL.md  conftest.py  run_ut.sh  test_cli_utils.py  test_stime.py  test_throughput_optimizer.py
tools/: __init__.py
web_ui/: README.md  __init__.py  app.py  callbacks.py  charts.py  command_builder.py  components.py  parsers.py  result_store.py  runner.py  schemas.py  styles.py  time_tracker.py  utils.py  web_ui_start.py
(+953 files in other folders)
