# Package ######################################################################

[project]
name = "liuren_modeling"
description = "Light-weight full-system simulation framework"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.9"

# Test tools ###################################################################

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "nightly: do_compile=True large model cases, only run in nightly",
    "npu: requires NPU hardware",
    "network: requires live model Hub access (HuggingFace/ModelScope); excluded by default, run in nightly",
]
addopts = "-m 'not npu and not nightly and not network'"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit._script",
]

# Coverage #####################################################################

[tool.coverage.run]
parallel = true
branch = true
omit = [
    "*/test_*.py",
    "*/tests/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/builtin_model/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "raise NotImplementedError",
]

[dependency-groups]
lint = [
    "pre-commit>=4.3.0",
]
ci = [
    "pydantic>=2",
    "pathspec>=0.12",
    "pyyaml>=6",
]
