[project]
name = "vllm-msserviceprofiler"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "vllm_msserviceprofiler", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points.'modelevalstate.plugins']
vllm_msserviceprofiler="vllm_msserviceprofiler:register"

